2006-11-26  Ian Rogers  <ian.rogers@manchester.ac.uk>

	* doc/vmintegration.texinfo: Update VM Threading Model section.

2006-11-26  Tom Tromey  <tromey@redhat.com>

	* native/jni/java-net/java_net_VMNetworkInterface.c: Conditionally
	include ifaddrs.h.
	(Java_java_net_VMNetworkInterface_getVMInterfaces): Updated
	conditional.
	* native/jni/java-net/gnu_java_net_VMPlainSocketImpl.c:
	Conditionally include ifaddrs.h.
	(getif_address): Updated conditional.
	(getif_index): Likewise.
	* configure.ac: Check for ifaddrs.h.

2006-11-25  Mark Wielaard  <mark@klomp.org>

	* java/io/File.java (list): Return empty list for unreadable dirs.

2006-11-25  Mark Wielaard  <mark@klomp.org>

	* gnu/java/awt/peer/gtk/CairoGraphics2D.java (drawGlyphVector):
	Synchronize on font peer.
	(setFont): Likewise.
	* gnu/java/awt/peer/gtk/GdkFontPeer.java (getFontMetrics): Mark
	synchronized.
	(getTextMetrics): Likewise.

2006-11-25  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/GapContent.java
	(getPositionsInRange): Rewritten to use the more efficient
	binary search searchFirst() and avoid an NPE that was caused
	by GC'ed positions.

2006-11-25  Mark Wielaard  <mark@klomp.org>

	* javax/swing/text/CompositeView.java (modelToView): Never return
	null.

2006-11-25  Mark Wielaard  <mark@klomp.org>

	* javax/swing/text/html/TableView.java (calculateColumnRequirements):
	Check whether rowView instanceof RowView.
	(updateGrid): Likewise.

2006-11-25  Mario Torre  <neugens@nirvana.limasoftware.net>

	PR28462
	* java/text/DecimalFormat.java: Almost new rewrite, and update to 1.5.
	* java/text/NumberFormat.java (format): all format methods, fixed
	FieldPosition argument should never be null.
	(format(Object, StringBuffer, FieldPosition)): fixed signature,
	method is not final.
	* java/text/DecimalFormatSymbols.java (clone): fixed to also clone
	locale.
	* AUTHORS: added my name to the file.

2006-11-25  Mark Wielaard  <mark@klomp.org>
